--- a/episodes/season_04.yml
+++ b/episodes/season_04.yml
@@ -4,8 +4,8 @@ episodes:
   season: 4
   episode: 1
   release_date: 1992-09-24
-  directors:
-  writers:
+  directors: ["Mark Kirkland"]
+  writers: ["David M. Stern"]
   description: Bart and Lisa are horrified when their summer at Kamp Krusty turns
     into a nightmare.
   disneyplus_id: 326e39c2-45a8-4781-9931-438ccbcc7f0a
@@ -16,8 +16,8 @@ episodes:
   season: 4
   episode: 2
   release_date: 1992-10-01
-  directors:
-  writers:
+  directors: ["Rich Moore"]
+  writers: ["Jeff Martin"]
   description: When Marge lands the role of Blanche in a local production of "A Streetcar
     Named Desire," Homer cannot hide his disinterest.
   disneyplus_id: 0e1f575c-eb6e-46d3-8765-d786c3cbe0fc
@@ -28,8 +28,8 @@ episodes:
   season: 4
   episode: 3
   release_date: 1992-10-08
-  directors:
-  writers:
+  directors: ["Jim Reardon"]
+  writers: ["George Meyer"]
   description: Homer creates his own religion as a means of escaping church services
     on Sundays.
   disneyplus_id: 1aac9cd6-a6d9-49ea-9ae3-fb1622a811fa
@@ -40,8 +40,8 @@ episodes:
   season: 4
   episode: 4
   release_date: 1992-10-15
-  directors:
-  writers:
+  directors: ["Mark Kirkland"]
+  writers: ["Jeff Martin"]
   description: Homer enters Lisa in a beauty pageant when her self-esteem plummets.
   disneyplus_id: 2f06393f-b88c-46b7-bddb-65bdf8172d44
   simpsonsworld_id: 273537603930
@@ -51,8 +51,8 @@ episodes:
   season: 4
   episode: 5
   release_date: 1992-10-29
-  directors:
-  writers:
+  directors: ["Carlos Baeza"]
+  writers: ["Al Jean", "Mike Reiss", "Jay Kogen", "Wallace Wolodarsky", "Sam Simon", "Jon Vitti"]
   description: During a Halloween party, the Simpsons tell three horrifying tales
     of the macabre.
   disneyplus_id: 540e1a2c-051a-4f48-b5f0-585138090af5
@@ -63,8 +63,8 @@ episodes:
   season: 4
   episode: 6
   release_date: 1992-11-03
-  directors:
-  writers:
+  directors: ["Rich Moore"]
+  writers: ["John Swartzwelder"]
   description: Homer forbids his son from seeing a new movie about his favorite cartoon
     heroes as punishment for misbehaving.
   disneyplus_id: 8c17cbd3-960b-4157-9792-8d02f0098c59
@@ -75,8 +75,8 @@ episodes:
   season: 4
   episode: 7
   release_date: 1992-11-05
-  directors:
-  writers:
+  directors: ["Jeff Lynch"]
+  writers: ["Bill Oakley", "Josh Weinstein"]
   description: When the foundation to the Simpsons' house is need of an expensive
     repair, Marge takes a position at the power plant where Homer works.
   disneyplus_id: 5d3a5020-24d8-40a9-b0b3-44fa32517226
@@ -87,8 +87,8 @@ episodes:
   season: 4
   episode: 8
   release_date: 1992-11-12
-  directors:
-  writers:
+  directors: ["Wes Archer"]
+  writers: ["Conan O'Brien"]
   description: Bart falls in love with the girl who moves in next door, only to find
     that she prefers the school bully.
   disneyplus_id: ca3bcaa1-7de1-4a36-b493-92db5ade62a6
@@ -99,8 +99,8 @@ episodes:
   season: 4
   episode: 9
   release_date: 1992-11-19
-  directors:
-  writers:
+  directors: ["Jim Reardon"]
+  writers: ["Jon Vitti"]
   description: Homer and Barney vie for Springfield's lucrative snow plowing business.
   disneyplus_id: 4534ec67-6d1f-48ad-b286-43e1cc108d3c
   simpsonsworld_id: 273544259768
@@ -110,8 +110,8 @@ episodes:
   season: 4
   episode: 10
   release_date: 1992-12-03
-  directors:
-  writers:
+  directors: ["Mark Kirkland"]
+  writers: ["Jeff Martin"]
   description: Marge recounts how Lisa first spoke as the family awaits baby Maggie's
     first word.
   disneyplus_id: 0cf6e0b2-0c75-4106-93a2-efc89238c60c
@@ -122,8 +122,8 @@ episodes:
   season: 4
   episode: 11
   release_date: 1192-12-17
-  directors:
-  writers:
+  directors: ["David Silverman"]
+  writers: ["Gary Apple", "Michael Carrington"]
   description: Homer suffers a heart attack and hires Dr. Nick Riviera to perform
     a delicate triple bypass operation.
   disneyplus_id: 2299137d-d5f0-4488-8b35-bfcd5e15dedd
@@ -134,8 +134,8 @@ episodes:
   season: 4
   episode: 12
   release_date: 1993-01-14
-  directors:
-  writers:
+  directors: ["Rich Moore"]
+  writers: ["Conan O'Brien'"]
   description: An unscrupulous profiteer sells the people of Springfield on a defective
     monorail system, with Homer as the conductor.
   disneyplus_id: fc04c428-5f24-4c42-a419-1d1dda6db8dd
@@ -146,8 +146,8 @@ episodes:
   season: 4
   episode: 13
   release_date: 1993-01-21
-  directors:
-  writers:
+  directors: ["Carlos Baeza"]
+  writers: ["David M. Stern"]
   description: Selma decides to take her dead aunt's advice and have children before
     it is too late.
   disneyplus_id: f2c8d63e-df66-419c-af18-5500e71f6d77
@@ -158,8 +158,8 @@ episodes:
   season: 4
   episode: 14
   release_date: 1993-02-04
-  directors:
-  writers:
+  directors: ["Jeff Lynch"]
+  writers: ["Jon Vitti"]
   description: Bart tires of Homer's lack of interest in him and chooses another father
     from the Bigger Brother program.  Lisa struggles to kick the habit of dialing
     a 900 number.
@@ -171,8 +171,8 @@ episodes:
   season: 4
   episode: 15
   release_date: 1993-02-11
-  directors:
-  writers:
+  directors: ["Wes Archer"]
+  writers: ["Frank Mula"]
   description: Lisa feels pity for Ralph, a nerdy classmate, and gives him a card
     on Valentine's Day. But to her horror, Ralph develops a crush on her.
   disneyplus_id: 24614fa3-99fe-4898-9dff-80ef324eb72f
@@ -183,8 +183,8 @@ episodes:
   season: 4
   episode: 16
   release_date: 1993-02-18
-  directors:
-  writers:
+  directors: ["Jim Reardon"]
+  writers: ["David M. Stern"]
   description: Marge convinces Homer he may have a drinking problem. Lisa plots to
     humiliate Bart with her science project after he ruins an experiment.
   disneyplus_id: 3bb045c7-34fd-45cb-98c2-b72e8db1ccba
@@ -195,8 +195,8 @@ episodes:
   season: 4
   episode: 17
   release_date: 1993-03-11
-  directors:
-  writers:
+  directors: ["Mark Kirkland"]
+  writers: ["Jay Kogen", "Wallace Wolodarsky"]
   description: Homer is elected union leader at the power plant and tries to save
     the dental plan so he will not have to pay for Lisa's new braces.
   disneyplus_id: e8b46e3c-2e23-42b8-aed6-136763d57c71
@@ -207,8 +207,8 @@ episodes:
   season: 4
   episode: 18
   release_date: 1993-04-01
-  directors:
-  writers:
+  directors: ["Carlos Baeza"]
+  writers: ["Jon Vitti"]
   description: Family and friends reminisce about Homer's life after Bart's April
     Fools' Day prank sends him to the hospital.
   disneyplus_id: db1dbdfe-ce8d-4bd5-8471-68c776549ac1
@@ -219,8 +219,8 @@ episodes:
   season: 4
   episode: 19
   release_date: 1993-04-15
-  directors:
-  writers:
+  directors: ["Rich Moore"]
+  writers: ["Adam I. Lapidus"]
   description: Using Grandpa as a front, Lisa and Bart write their own "Itchy and
     Scratchy" cartoons.
   disneyplus_id: a5a0f5e2-1972-4360-8ec3-7c1374319a1a
@@ -231,8 +231,8 @@ episodes:
   season: 4
   episode: 20
   release_date: 1993-04-29
-  directors:
-  writers:
+  directors: ["Jeff Lynch"]
+  writers: ["John Swartzwelder"]
   description: Lisa seeks to end a local holiday in which snakes are chased into town
     and beaten with sticks.  Bart is expelled from school by Principal Skinner.
   disneyplus_id: 9ccf6860-afd1-4db1-8ea7-afe4f5dcbde9
@@ -243,8 +243,8 @@ episodes:
   season: 4
   episode: 21
   release_date: 1993-05-06
-  directors:
-  writers:
+  directors: ["Jim Reardon"]
+  writers: ["Bill Oakley", "Josh Weinstein"]
   description: Marge is jailed when she is convicted of stealing from Apu's convenience
     store.
   disneyplus_id: d02ae0e2-fcf2-43c0-b34a-372808d5dfd2
@@ -255,8 +255,8 @@ episodes:
   season: 4
   episode: 22
   release_date: 1993-05-13
-  directors:
-  writers:
+  directors: ["David Silverman"]
+  writers: ["John Swartzwelder"]
   description: Bart, Lisa and a group of celebrities help Krusty turn his career around
     after his television show is canceled.
   disneyplus_id: 5c868b0d-b9d4-48a7-b40a-1027f81154db
