--- a/episodes/season_14.yml
+++ b/episodes/season_14.yml
@@ -3,280 +3,280 @@ episodes:
 - title: Treehouse of Horror XIII
   season: 14
   episode: 1
-  release_date:
-  directors:
-  writers:
+  release_date: 2002-11-03
+  directors: ["David Silverman"]
+  writers: ["Marc Wilmore", "Brian Kelley", "Kevin Curran"]
   description: On Halloween, Homer's evil hammock produces an army of Homer clones;
     zombie cowboys threaten to destroy Springfield after Lisa outlaws guns; the Simpsons
     travel to an island inhabited by 'manimals.'
   disneyplus_id: 3c929d17-30d3-4f18-887e-af51361b015a
   simpsonsworld_id: 221301315863
   good: true
-  guest_stars:
+  guest_stars: null
 - title: How I Spent My Strummer Vacation
   season: 14
   episode: 2
-  release_date:
-  directors:
-  writers:
+  release_date: 2002-11-10
+  directors: ["Mike B. Anderson"]
+  writers: ["Mike Scully"]
   description: When a hidden camera tapes Homer lamenting that having a family meant
     kissing goodbye his dreams of becoming a rock 'n' roll star, Marge enrolls him
     a fantasy rock star camp run by The Rolling Stones.
   disneyplus_id: ced4d9f0-93c2-4832-be02-41bbec25bb81
   simpsonsworld_id: 221293123693
   good: false
-  guest_stars:
+  guest_stars: ["Elvis Costello", "Mick Jagger", "Lenny Kravitz", "Tom Petty", "Keith Richards", "Brian Setzer"]
 - title: Bart vs. Lisa vs. 3rd Grade
   season: 14
   episode: 3
-  release_date:
-  directors:
-  writers:
+  release_date: 2002-11-17
+  directors: ["Steven Dean Moore"]
+  writers: ["Tim Long"]
   description: Bart and Lisa are horrified when they both end up in the same 3rd grade
     class.
   disneyplus_id: 87d21214-5742-4f77-89b8-d14d38e73772
   simpsonsworld_id: 221347395722
   good: true
-  guest_stars:
+  guest_stars: ["Tony Bennett"]
 - title: Large Marge
   season: 14
   episode: 4
-  release_date:
-  directors:
-  writers:
+  release_date: 2002-11-24
+  directors: ["Jim Reardon"]
+  writers: ["Ian Maxtone-Graham"]
   description: Marge's life changes dramatically when her attempt to lose weight via
     surgery resulting in larger breasts; Bart and Milhouse get into mischief that
     leads to a public relations nightmare for Krusty.
   disneyplus_id: 4c9736ca-bf75-424d-a839-9c954722ed1e
   simpsonsworld_id: 221352515586
   good: false
-  guest_stars:
+  guest_stars: ["Jan Hooks", "Marcia Wallace", "Burt Ward", "Adam West", "Patrick Carey", "Omerit Hield", "Marvin Prosper"]
 - title: Helter Shelter
   season: 14
   episode: 5
-  release_date:
-  directors:
-  writers:
+  release_date: 2002-12-01
+  directors: ["Mark Kirkland"]
+  writers: ["Brian Pollack", "Mert Rich"]
   description: When the Simpson house undergoes fumigation, the family is forced to
     seek shelter elsewhere... and ends up participating in a reality TV program set
     in a house from the 1800s.
   disneyplus_id: d6afb3d4-fad3-4b9d-95f3-4f294c847db1
   simpsonsworld_id: 221388355650
   good: false
-  guest_stars:
+  guest_stars: ["David Lander", "Larry Holmes"]
 - title: The Great Louse Detective
   season: 14
   episode: 6
-  release_date:
-  directors:
-  writers:
+  release_date: 2002-12-15
+  directors: ["Steven Dean Moore"]
+  writers: ["John Frink", "Don Payne"]
   description: When someone attempts to murder Homer, Sideshow Bob is released from
     prison to help identify the culprit before he strikes again.
   disneyplus_id: ae9e9d58-b373-4c0d-857a-42fb7a84a316
   simpsonsworld_id: 221467203550
   good: false
-  guest_stars:
+  guest_stars: ["Kelsey Grammer"]
 - title: Special Edna
   season: 14
   episode: 7
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-01-05
+  directors: ["Bob Anderson"]
+  writers: ["Dennis Snee"]
   description: When Bart gets Mrs. Krabappel nominated for Teacher of the Year, the
     family heads for Orlando to attend the ceremony.  But Skinner fears he may lose
     Krabappel forever... and asks Bart to sabotage the affair.
   disneyplus_id: 06bec5b1-7e14-4cac-805f-0e0004333f9e
   simpsonsworld_id: 221467715532
   good: true
-  guest_stars:
+  guest_stars: ["Little Richard"]
 - title: The Dad Who Knew Too Little
   season: 14
   episode: 8
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-01-12
+  directors: ["Mark Kirkland"]
+  writers: ["Matt Selman"]
   description: Homer hires a shady private investigator to spy on Lisa when he realizes
     he doesn't know very much about his daughter.
   disneyplus_id: 3b28d928-7acf-4429-a0c8-a3b791ff21bc
   simpsonsworld_id: 221531715548
   good: true
-  guest_stars:
+  guest_stars: ["Elliott Gould"]
 - title: The Strong Arms of The Ma
   season: 14
   episode: 9
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-02-02
+  directors: ["Pete Michels"]
+  writers: ["Carolyn Omine"]
   description: When Marge is mugged at the Kwik-E-Mart, she develops agoraphobia and
     ends up living in the basement... until she turns into a fearless bodybuilder.
   disneyplus_id: 06fad58a-25d7-40c0-a83d-adcbddc60bce
   simpsonsworld_id: 221532739689
   good: false
-  guest_stars:
+  guest_stars: ["Pamela Reed"]
 - title: Pray Anything
   season: 14
   episode: 10
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-02-09
+  directors: ["Michael Polcino"]
+  writers: ["Sam O'Neal", "Neal Boushell"]
   description: Inspired by Ned Flanders, Homer turns to prayer in hopes of changing
     his lot in life.  But when he injures himself coming out of church, Homer sues
     for damages... and is awarded the church itself.
   disneyplus_id: 78bd01df-cfb9-4698-9543-1ab60b39316e
   simpsonsworld_id: 221526595805
   good: false
-  guest_stars:
+  guest_stars: ["Ken Burns", "Lisa Leslie"]
 - title: Barting Over
   season: 14
   episode: 11
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-02-16
+  directors: ["Matthew Nastuk"]
+  writers: ["Andrew Kreisberg"]
   description: When Bart discovers the existence of an embarrassing TV commercial
     he appeared in as a baby-and that Homer spent the money he earned-he sues for
     emancipation and moves out of the house.
   disneyplus_id: a0f86449-2e95-4f93-9530-8583b944153c
   simpsonsworld_id: 221696067841
   good: false
-  guest_stars:
+  guest_stars: ["Tony Hawk", "Mark Hoppus", "Tom DeLonge", "Travis Barker", "Jane Kaczmarek"]
 - title: I'm Spelling as Fast as I Can
   season: 14
   episode: 12
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-02-16
+  directors: ["Nancy Kruse"]
+  writers: ["Kevin Curran"]
   description: When Lisa becomes a finalist in a spelling bee, she's offered a college
     scholarship in exchange for losing; Homer falls hopelessly in love with Krustyburger's
     limited-time-only rib sandwich.
   disneyplus_id: 2bed81b0-4523-43c4-b3f7-b8420f76024b
   simpsonsworld_id: 221698627830
   good: false
-  guest_stars:
+  guest_stars: ["George Plimpton"]
 - title: A Star is Born-Again
   season: 14
   episode: 13
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-03-02
+  directors: ["Michael Marcantel"]
+  writers: ["Brian Kelley"]
   description: A Hollywood movie star takes a romantic interest in Ned Flanders, and
     when the relationship blossoms, Ned's faith is put to the test when the star wants
     to have premarital sex.
   disneyplus_id: 413584b6-3fc2-4c21-bcd9-19edcb87f17e
   simpsonsworld_id: 221695043703
   good: false
-  guest_stars:
+  guest_stars: ["Helen Fielding", "James L. Brooks", "Marisa Tomei"]
 - title: Mr. Spritz Goes To Washington
   season: 14
   episode: 14
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-03-09
+  directors: ["Lance Kramer"]
+  writers: ["John Swartzwelder"]
   description: When Springfield Airport changes the flight paths of airplanes, sending
     them over the Simpson's house, the family convinces Krusty to run for congress
     so he can change the law.
   disneyplus_id: 22618eac-62dd-4e12-96ba-21480c311e01
   simpsonsworld_id: 221699651686
   good: true
-  guest_stars:
+  guest_stars: ["Joe Mantegna"]
 - title: C.E.D'oh
   season: 14
   episode: 15
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-03-16
+  directors: ["Mike B. Anderson"]
+  writers: ["Dana Gould"]
   description: On Valentine's Day, Homer attends a college course on how to succeed
     in the corporate world, he becomes the owner of the power plant and fires Mr.
     Burns... only to realize that running the plant means being away from family.
   disneyplus_id: 072eac8a-cce2-4eae-ae8e-0b2830c50b21
   simpsonsworld_id: 221696067982
   good: true
-  guest_stars:
+  guest_stars: null
 - title: "'Scuse Me While I Miss The Sky"
   season: 14
   episode: 16
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-03-30
+  directors: ["Steven Dean Moore"]
+  writers: ["Dan Greaney", "Allen Glazier"]
   description: As a British filmmaker makes a documentary about Springfield Elementary,
     Lisa tires to save the nighttime sky from light pollution, while Bart attempts
     to restore his coolness by obtaining a hood ornament from Fat Tony's car.
   disneyplus_id: 124c3766-ec1a-4c61-85c1-e9dc770a8548
   simpsonsworld_id: 221700675635
   good: false
-  guest_stars:
+  guest_stars: ["Eric Idle", "Joe Mantegna"]
 - title: Three Gays of the Condo
   season: 14
   episode: 17
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-04-13
+  directors: ["Mark Kirkland"]
+  writers: ["Matt Warburton"]
   description: Homer moves in with a gay couple after discovering a letter Marge wrote
     years earlier that implies she resents him.
   disneyplus_id: 35fdd041-58b4-4a6c-a6a1-a1aa12d2ee9c
   simpsonsworld_id: 221699139984
   good: false
-  guest_stars:
+  guest_stars: ["Scott Thompson", "Weird Al Yankovic"]
 - title: Dude, Where's My Ranch?
   season: 14
   episode: 18
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-04-27
+  directors: ["Chris Clements"]
+  writers: ["Ian Maxtone-Graham"]
   description: While vacationing at a dude ranch, Lisa falls for a cute 13-year-old
     cowboy; Homer vows to stop beavers who've dammed a river and kept Native Americans
     from their land.
   disneyplus_id: b2674cb0-30d5-4033-85ee-6f92ec4742e9
   simpsonsworld_id: 221700163549
   good: false
-  guest_stars:
+  guest_stars: ["Jonathan Taylor Thomas", "Andy Serkis", "David Byrne"]
 - title: Old Yeller-Belly
   season: 14
   episode: 19
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-05-04
+  directors: ["Bob Anderson"]
+  writers: ["John Frink", "Don Payne"]
   description: When Santa's Little Helper becomes Duff Beer's new, highly-paid mascot,
     his original owner comes out of the woodwork and claims the dog belongs to him.
   disneyplus_id: d05adc7d-5679-4d0b-bf54-98ade578f1bd
   simpsonsworld_id: 221701187546
   good: false
-  guest_stars:
+  guest_stars: ["Stacy Keach", "John Kassir"]
 - title: Brake My Wife, Please
   season: 14
   episode: 20
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-05-11
+  directors: ["Pete Michels"]
+  writers: ["Tim Long"]
   description: When Homer loses his driver's license, he embraces walking.  But Marge
     begins to suffer from stress when the pressure of being the only full-time driver
     in the house takes its toll-and ends up running Homer over in her car.
   disneyplus_id: 4338a61e-9197-4066-949a-0a11ed4e1105
   simpsonsworld_id: 229724227970
   good: false
-  guest_stars:
+  guest_stars: ["Steve Buscemi", "Jackson Browne", "Jane Kaczmarek"]
 - title: The Bart of War
   season: 14
   episode: 21
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-05-18
+  directors: ["Michael Polcino"]
+  writers: ["Marc Wilmore"]
   description: After police discover Bart and Milhouse ransacking Flanders' Beatles
     memorabilia, Marge decides to place her son in a supervised activity, the Pre-Teen
     Braves.
   disneyplus_id: 80d14bbb-7b6a-4d67-8c18-9a4ec85fb489
   simpsonsworld_id: 229731395601
   good: false
-  guest_stars:
+  guest_stars: null
 - title: Moe Baby Blues
   season: 14
   episode: 22
-  release_date:
-  directors:
-  writers:
+  release_date: 2003-05-18
+  directors: ["Lauren MacMullan"]
+  writers: ["J. Stewart Burns"]
   description: When Moe saves baby Maggie's life, a close bond forms.  But when Maggie
     wanders off with some gangsters, Homer and Marge mistakenly believe that Moe is
     responsible for the baby's disappearance.
   disneyplus_id: bbd0d9ff-4b47-4fbd-9df8-cfda37516844
   simpsonsworld_id: 228412483812
   good: true
-  guest_stars:
+  guest_stars: ["Joe Mantegna"]
